@@ -2,6 +2,7 @@ Release Notes
 
 * 11/9/2016
   * changed AtlasPTB not to ignore job execution ability
+  * introduced cutoff based on ioIntensity and mbToMove in AtlasPJB
 
 * 11/7/2016
   * changed JG not to use compact input params for user's trf jobs
